# gerber_viewer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: transform_benchmark.rs
demo/: Cargo.toml
demo/assets/: arcs.gbr  demo.gbr  diptrace-region-test-1.gbr  macro-centerline.gbr  macro-polygons-concave.gbr  macro-polygons.gbr  macro-variables.gbr  macro-vectorline.gbr  region-non-overlapping-contours.gbr  vector-font-for-ai-prompt.gbr  vector-font.gbr
demo/src/: main.rs
demo_lens/: Cargo.toml  README.md
demo_lens/assets/: cmod_s7-Edge_Cuts.gbr  cmod_s7-F_Paste.gbr  macro-polygons.gbr  macro-vectorline.gbr
demo_lens/src/: main.rs
demo_lens/src/platform/: mod.rs
demo_multi_view/: Cargo.toml
demo_multi_view/assets/: cmod_s7-B_Cu.gbr  cmod_s7-B_Mask.gbr  cmod_s7-B_Paste.gbr  cmod_s7-B_SilkS.gbr  cmod_s7-F_Cu.gbr  cmod_s7-F_Mask.gbr  cmod_s7-F_SilkS.gbr  cmod_s7-PTH.drl  macro-polygons-concave.gbr
demo_multi_view/src/: constants.rs  grid.rs  layers.rs  main.rs
demo_multi_view/src/platform/: mod.rs  parameters.rs
demo_multi_view/src/ui/: drc_panel.rs  grid_settings.rs  layer_controls.rs  mod.rs  orientation_panel.rs
src/: drawing.rs  expressions.rs  geometry.rs  layer.rs  lib.rs  position.rs  renderer.rs  spacial.rs  testing.rs  types.rs  ui.rs
src/geometry/: bounding_box.rs  mesh.rs  mirroring.rs  shapes.rs  transform.rs
