[package]
name = "gerber_viewer"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Clifton <me@dominicclifton.name>"]

[dependencies]
# Rendering (optional, see README.md)
egui = { version = "0.31.1", optional = true }

# Gerber files
gerber-types = { git = "https://github.com/makerpnp/gerber-types-rs.git", rev = "7a312f81f82e743ff44eca2d5153c6a1fa9befb0"}

# Gerber parser (optional, see README.md)
gerber_parser = { git = "https://github.com/makerpnp/gerber-parser-makerpnp.git", rev = "e4c0f05a246d23efd3ddf163d6a559cbb9cf4b99", optional = true }
#gerber_parser = { path = "../../../libraries/rust/gerber-parser", optional = true }

# Math
rand = "0.9.1"
lyon = "1.0"

# Errors
thiserror = "2.0.12"

# Logging
log = "0.4"
rstest = "0.25.0"

[features]
default = ["types", "parser", "egui"]

# add egui rendering API
egui = ["dep:egui"]

# just adds a re-export of gerber-parser.
parser = ["dep:gerber_parser"]
# just adds a re-export of gerber-types, the gerber-types will still be used.
types = []
