[package]
name = "gerber_viewer"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Clifton <me@dominicclifton.name>"]

[dependencies]
# Rendering (optional, see README.md)
egui = { version = "0.31.1", optional = true }

# Gerber files
gerber-types = { git = "https://github.com/makerpnp/gerber-types-rs.git", rev = "351ef9150fdc4be735ce0d22542f0c333c3aefd2"}
#gerber-types = { path = "../../../libraries/rust/gerber-types-rs", optional = true }

# Gerber parser (optional, see README.md)
gerber_parser = { git = "https://github.com/makerpnp/gerber-parser-makerpnp.git", rev = "81f166bc729d7a3e1bc9631731b8e5c36307743a", optional = true }
#gerber_parser = { path = "../../../libraries/rust/gerber-parser", optional = true }

# Math
rand = "0.9.1"
lyon = "1.0"

# Errors
thiserror = "2.0.12"

# Logging
log = "0.4"

[features]
default = ["types", "parser", "egui"]

# add egui rendering API
egui = ["dep:egui"]

# just adds a re-export of gerber-parser.
parser = ["dep:gerber_parser"]
# just adds a re-export of gerber-types, the gerber-types will still be used.
types = []

# include test helpers
testing = []

[dev-dependencies]
rstest = "0.25.0"
env_logger = "0.11.8"
gerber_viewer = { path = ".", features = ["testing"] }
