[package]
name = "gerber_viewer"
version = "0.1.0"
edition = "2021"
authors = ["Dominic Clifton <me@dominicclifton.name>"]

[dependencies]
# Rendering (optional, see README.md)
egui = { version = "0.31.1", optional = true }

# Gerber files
# currently un-released, using latest gerber_types with updates to support macro expressions
#gerber_types = "0.4.0"
gerber_types = { git = "https://github.com/MakerPnP/gerber-types.git", rev = "7641a4c92482411b6a05a5dc36793151763b40e6"}
#gerber_types = { path = "../gerber-types" }

# Gerber parser (optional, see README.md)
gerber_parser = { git = "https://github.com/makerpnp/gerber-parser.git", rev = "c8a86362b7cf68964dedce3fb7339d7a5feb9106", optional = true }
#gerber_parser = { path = "../gerber-parser", optional = true }

# Math
rand = "0.9.1"
lyon = "1.0"

# Errors
thiserror = "2.0.12"

# Logging
log = "0.4"

# Profiling
profiling = { version = "1.0.16" }

# Serialization
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
default = ["types", "parser", "egui"]

# add egui rendering API
egui = ["dep:egui"]

# just adds a re-export of gerber-parser.
parser = ["dep:gerber_parser"]
# just adds a re-export of gerber-types, the gerber-types will still be used.
types = []

serde = ["dep:serde"]

# include test helpers
testing = []

# enable to create profiling scopes for each type of gerber primitive
profile-renderables = []

[dev-dependencies]
rstest = "0.25.0"
env_logger = "0.11.8"
gerber_viewer = { path = ".", features = ["testing"] }
